Correct (and simplify) command parsing in profiles with respect to spaces.

BUG: 188230

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=992625